view/frontend/web/css/modal.css
.modal-inner-wrap.twint {
    background-color: rgb(243 244 246);
    padding: 0 !important;
}

.twint header {
    padding-left: 0 !important;
    padding-right: 0 !important;
    border-bottom: solid 1px rgba(0, 0, 0, 0.25);
    padding-bottom: 1.2rem;
    padding-top: 1.2rem;
}

.twint-logo {
    width: 139px;
    height: 53px;
}

#twint-close {
    border: none;
    background-color: inherit;
    color: #262626;
    display: flex;
    align-items: center;
    vertical-align: middle;
    font-weight: 400;
}

#twint-close svg {
    margin: 0 8px 0 0;
}

#twint-close span {
    display: inline-block;
}

#twint-close:active {
    box-shadow: none;
}

#twint-close:hover, #twint-close:focus {
    background-color: inherit;
    border: none;
    color: #262626;
    font-weight: 400;
}

.twint-modal-slide {
    left: 0 !important;
}

#qr-token {
    text-align: center;
    font-weight: 600;
    font-size: 30px;
    line-height: 41px;
    letter-spacing: 4px;
    color: black;
    border: none;
    opacity: 1;
}

.separator:before, .separator:before {
    content: '';
    flex-grow: 1;
    border-bottom: 1px solid #CCCCCC;
}

.twint #btn-copy-token{
    color: #262626;
}

.twint #btn-copy-token.copied{
    color: rgb(34 197 94 / var(--tw-text-opacity));
}

